<resources>
    <string name="app_name">LoginRipa</string>
    <string name="restaurante_ripa">RESTAURANTE RIPA</string>
    <string name="login">Login</string>
    <string name="sign_up">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="username">Usuario</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="i_agree_with_the_terms_amp_conditions"><![CDATA[Estoy de acuerdo con los términos y condiciones]]></string>
    <string name="home">Home</string>
    <string name="errorEmpty">El campo no debe estar vacío</string>
    <string name="errorIncorrect">Usuario o contraseña incorrecta</string>
    <string name="errorPasswordMatch">Las contraseñas no coinciden</string>
    <string name="compras">Compras</string>
    <string name="buscar">Buscar</string>
    <string name="usuario">Usuario</string>
    <string name="ver_detalle">Ver detalle</string>
    <string name="apto_celiaco">Apto Celíacos</string>
    <string name="valor_comida">$Valor comida</string>
    <string name="descripcion_comida">Descripcion comida</string>
    <string name="nombre_comida">Nombre comida</string>
    <string name="favoritos">Favoritos</string>
    <string name="direccion">Jl . Jayakatwang no 301</string>
    <string name="hola_sujeto">Hola, sujeto</string>
    <string name="bienvenida">¿Qué te gustaría pedir hoy?</string>
    <string name="flecha">flecha</string>
    <string name="notificacion">notificacion</string>
    <string name="etiquetas">Etiquetas</string>
    <string name="tendencias">Tendencias</string>
    <string name="mas">Más</string>
    <string name="promociones">Promociones del día</string>
    <string name="var_mas">Ver más</string>
    <string name="image_comida">image comida</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="error_comidas">Ha ocurrido un error al obtener las comidas</string>
    <string name="precio_comida">$ %1$s</string>
    <string name="descripcion_estrella">estrella</string>
</resources>