<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cvFood"
    android:layout_width="match_parent"
    android:layout_height="137dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="15dp"
    android:layout_marginHorizontal="15dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    android:background="@color/white"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/roundstyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvComidaMore"
            android:layout_width="72dp"
            android:layout_height="82dp"
            app:layout_constraintTop_toTopOf="@id/contenedor"
            app:layout_constraintLeft_toLeftOf="@id/contenedor"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="13dp">
            <ImageView
                android:id="@+id/imgComidaMore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/image_comida"/>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tvNombreComidaMore"
            android:layout_width="210dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:text="@string/nombre_comida"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/titles"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/cvComidaMore"
            app:layout_constraintTop_toTopOf="@id/contenedor"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintRight_toLeftOf="@id/favoritos"/>

        <TextView
            android:id="@+id/tvPrecioComidaMore"
            android:layout_width="210dp"
            android:layout_height="18dp"
            android:text="@string/valor_comida"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="8dp"
            android:textColor="@color/texts"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/tvNombreComidaMore"
            app:layout_constraintTop_toBottomOf="@id/tvNombreComidaMore" />

        <ImageView
            android:id="@+id/envio_gratis"
            android:layout_width="106dp"
            android:layout_height="20dp"
            android:src="@drawable/free_delivery"
            app:layout_constraintLeft_toLeftOf="@id/tvNombreComidaMore"
            app:layout_constraintTop_toBottomOf="@id/tvPrecioComidaMore"
            android:layout_marginTop="9dp"/>

        <TextView
            android:id="@+id/tvAptoMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apto_celiaco"
            android:textColor="@color/button"
            android:layout_marginTop="9dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/contenedor"
            app:layout_constraintLeft_toLeftOf="@id/cvComidaMore"
            android:layout_marginBottom="13dp"/>

        <ImageView
            android:id="@+id/favoritos"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="8dp"
            android:background="@drawable/completeroundstyle"
            android:src="@drawable/fav2"
            android:contentDescription="@string/favoritos"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="13dp"
            android:layout_marginTop="21dp"
            android:elevation="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>