<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.DetailsFoodActivity"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/nombre_comida"
        app:titleTextColor="@color/titles"
        app:navigationIcon="@drawable/back"/>

    <ImageView
        android:id="@+id/imgComidaDetail"
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:src="@drawable/imagen_comida"
        android:scaleType="centerCrop"
        android:scrollbars = "vertical"
        app:layout_constraintTop_toBottomOf="@id/tbToolbar"
        android:contentDescription="@string/image_comida" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imgComidaDetail">

        <TextView
            android:id="@+id/tvNombreComidaDetail"
            android:layout_width="230dp"
            android:layout_height="35dp"
            android:text="@string/nombre_comida"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/titles"
            android:textSize="26sp"
            android:layout_marginTop="22dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tvPrecioComidaDetail"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/tvPrecioComidaDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_comida"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/titles"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="21dp"/>

        <TextView
            android:id="@+id/tvDescripcionComidaDetail"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_comida"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintHorizontal_bias="0"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/tvNombreComidaDetail"
            app:layout_constraintLeft_toLeftOf="@id/tvNombreComidaDetail"
            app:layout_constraintRight_toRightOf="parent"

            android:textSize="16sp"
            android:textColor="@color/texts"/>

        <ImageView
            android:id="@+id/ivRatingDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/estrella"
            app:layout_constraintLeft_toLeftOf="@id/tvDescripcionComidaDetail"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="19dp"
            android:contentDescription="@string/descripcion_estrella" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5.0"
            android:textColor="@color/titles"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/ivRatingDetail"
            app:layout_constraintBottom_toBottomOf="@id/ivRatingDetail"
            android:layout_marginStart="7.5dp"/>

        <ImageView
            android:id="@+id/vectorCircleDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rectangle_56"
            app:layout_constraintLeft_toRightOf="@id/tvRating"
            app:layout_constraintBottom_toBottomOf="@id/ivRatingDetail"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/tickCircleDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            app:layout_constraintTop_toTopOf="@id/vectorCircleDetail"
            app:layout_constraintLeft_toLeftOf="@id/vectorCircleDetail"
            app:layout_constraintBottom_toBottomOf="@id/vectorCircleDetail"
            app:layout_constraintRight_toRightOf="@id/vectorCircleDetail"/>

        <TextView
            android:id="@+id/tvApto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apto_celiaco"
            android:textColor="@color/titles"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/vectorCircleDetail"
            app:layout_constraintBottom_toBottomOf="@id/vectorCircleDetail"
            android:layout_marginStart="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvIngredientesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/container"
            android:text="@string/ingredientes"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/titles"
            android:textSize="16sp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="21dp"/>

        <TextView
            android:id="@+id/tvIngredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvIngredientesTitle"
            android:textColor="@color/titles"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>