<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activities.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContainerHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/vSpinner"
                android:layout_width="238dp"
                android:layout_height="36dp"
                android:background="@drawable/spinner_background_style"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/direccion"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/texts"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/vSpinner"
                app:layout_constraintLeft_toLeftOf="@id/vSpinner"
                app:layout_constraintTop_toTopOf="@+id/vSpinner" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/flecha"
                android:src="@drawable/flecha"
                app:layout_constraintBottom_toBottomOf="@id/vSpinner"
                app:layout_constraintRight_toRightOf="@id/vSpinner"
                app:layout_constraintTop_toTopOf="@id/vSpinner" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/notificacion"
                android:src="@drawable/notificacion"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hola_sujeto"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/titles"
                android:textSize="28sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vSpinner" />

            <TextView
                android:id="@+id/tvPregunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/bienvenida"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/texts"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHola" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/opciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:layout_constraintTop_toBottomOf="@id/tvPregunta">

                <ImageView
                    android:id="@+id/favoritos"
                    android:layout_width="0dp"
                    android:layout_height="74dp"
                    android:background="@drawable/roundstyle"
                    android:contentDescription="@string/favoritos"
                    android:padding="23dp"
                    android:src="@drawable/fav"
                    app:layout_constraintEnd_toStartOf="@+id/ofertas"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/favoritos"
                    android:textColor="@color/texts"
                    app:layout_constraintLeft_toLeftOf="@+id/favoritos"
                    app:layout_constraintRight_toRightOf="@id/favoritos"
                    app:layout_constraintTop_toBottomOf="@+id/favoritos" />

                <ImageView
                    android:id="@+id/ofertas"
                    android:layout_width="0dp"
                    android:layout_height="74dp"
                    android:layout_marginStart="18dp"
                    android:background="@drawable/roundstyle"
                    android:contentDescription="@string/etiquetas"
                    android:padding="23dp"
                    android:src="@drawable/etiqueta"
                    app:layout_constraintEnd_toStartOf="@+id/tendencias"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/favoritos"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/etiquetas"
                    android:textColor="@color/texts"
                    app:layout_constraintLeft_toLeftOf="@+id/ofertas"
                    app:layout_constraintRight_toRightOf="@id/ofertas"
                    app:layout_constraintTop_toBottomOf="@+id/ofertas" />

                <ImageView
                    android:id="@+id/tendencias"
                    android:layout_width="0dp"
                    android:layout_height="74dp"
                    android:layout_marginStart="18dp"
                    android:background="@drawable/roundstyle"
                    android:contentDescription="@string/tendencias"
                    android:padding="18dp"
                    android:src="@drawable/tendencia"
                    app:layout_constraintEnd_toStartOf="@+id/mas"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ofertas"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/tendencias"
                    android:textColor="@color/texts"
                    app:layout_constraintLeft_toLeftOf="@+id/tendencias"
                    app:layout_constraintRight_toRightOf="@id/tendencias"
                    app:layout_constraintTop_toBottomOf="@+id/tendencias" />

                <ImageView
                    android:id="@+id/mas"
                    android:layout_width="0dp"
                    android:layout_height="74dp"
                    android:layout_marginStart="18dp"
                    android:background="@drawable/roundstyle"
                    android:contentDescription="@string/mas"
                    android:padding="17dp"
                    android:src="@drawable/mas"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tendencias"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/mas"
                    android:textColor="@color/texts"
                    app:layout_constraintLeft_toLeftOf="@+id/mas"
                    app:layout_constraintRight_toRightOf="@id/mas"
                    app:layout_constraintTop_toBottomOf="@+id/mas" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/promociones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/promociones"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/titles"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/opciones" />

            <TextView
                android:id="@+id/verMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/var_mas"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/extras"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/promociones"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/promociones" />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/red"
                android:textSize="24sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/promociones" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvComidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="14dp"
            app:layout_constraintTop_toBottomOf="@id/clContainerHome" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemRippleColor="@color/extras"
        app:labelVisibilityMode="unlabeled"
        app:itemIconTint="@color/bottom_navigation_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>